--- a/index.html
+++ b/index.html
@@ -1,28 +1,116 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
-	</body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <!-- STYLES -->
+    <link rel="stylesheet" href="css/bootstrap-grid.css">
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    <div class="container">
+        <aside class="resume">
+            <header class="aside-header">
+                <div class="box">
+                    <div class="initials">
+                        <span class="first">b</span>
+                        <span class="second">s</span>
+                    </div>
+                    <div class="name">
+                        bruno sastre
+                    </div>
+                    <div class="position">
+                        web developer
+                    </div>
+                    <div class="date">
+                        06/10/2021
+                    </div>
+                </div>
+                <div class="cv-resume">
+                    <div class="line">
+                        <span class="text">
+                            Cv / Resume
+                        </span>
+                    </div>
+                </div>
+            </header>
+        </aside>
+        <main>
+            <header class="main-header">
+                <div class="container-fluid">
+                    <div class="row align-items-center">
+                        <div class="col-3">
+                            <span class="avatar-container"><img src="assets/avatar.png" alt="avatar"></span>
+                        </div>
+                        <div class="col-9">
+                            <p class="intro">
+                                I am a web developer focused on crafting pixel-perfect desgins. I deliver mockups from designs with 99% accuracy.
+                                I have 6 years of experience developing websites. I love paying attention to details.
+                                I offer to work for free on a first small project so that you know my capabilities. I am looking for a remote part-time job.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-3">
+                            <h2>contact</h2>
+                            <ul class="stack">
+                                <li>brsastre@gmail.com</li>
+                            </ul>
+                        </div>
+                        <div class="col-9">
+                            <h2>education</h2>
+                            <ul class="timeline">
+                                <li>
+                                    <span class="year">2008</span>
+                                    <span class="title">Bachelor of Graphic Design</span>
+                                    <span class="subtitle">UDE University</span>
+                                </li>
+                                <li>
+                                    <span class="year">2015</span>
+                                    <span class="title">Bachelor of Web Design</span>
+                                    <span class="subtitle">ORT University</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-3">
+                            <h2>skills</h2>
+                            <ul class="stack">
+                                <li>HTML 5</li>
+                                <li>CSS3</li>
+                                <li>SASS</li>
+                                <li>RESPONSIVE DESIGN</li>
+                                <li>BOOTSTRAP</li>
+                                <li>JAVASCRIPT</li>
+                                <li>GIT</li>
+                                <li>WORDPRESS</li>
+                                <li>PHOTOSHOP</li>
+                                <li>ILLUSTRATOR</li>
+                            </ul>
+                        </div>
+                        <div class="col-9">
+                            <h2>experience</h2>
+                            <ul class="timeline">
+                                <li>
+                                    <span class="year">2013</span>
+                                    <span class="title">Front-end developer</span>
+                                    <span class="subtitle">Ameba web design agency</span>
+                                    <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat dicta tempora consequuntur quas, nemo dolores similique praesentium impedit voluptatum, commodi minus sint accusantium illo! Impedit distinctio repellendus illo magni corrupti.</p>
+                                </li>
+                                <li>
+                                    <span class="year">2015</span>
+                                    <span class="title">Bachelor of Web Design</span>
+                                    <span class="subtitle">ORT University</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </header>
+        </main>
+    </div>
+</body>
 </html>
