--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         <main>
             <header class="main-header">
                 <div class="container-fluid">
-                    <div class="row align-items-center">
-                        <div class="col-3">
+                    <div class="row">
+                        <div class="col-lg-3 avatar-col">
                             <span class="avatar-container"><img src="assets/avatar.png" alt="avatar"></span>
                         </div>
-                        <div class="col-9">
+                        <div class="col-lg-9">
                             <p class="intro">
                                 I am a web developer focused on crafting pixel-perfect desgins. I deliver mockups from designs with 99% accuracy.
                                 I have 6 years of experience developing websites. I love paying attention to details.
@@ -53,13 +53,13 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-lg-3">
                             <h2>contact</h2>
                             <ul class="stack">
                                 <li>brsastre@gmail.com</li>
                             </ul>
                         </div>
-                        <div class="col-9">
+                        <div class="col-lg-9">
                             <h2>education</h2>
                             <ul class="timeline">
                                 <li>
@@ -76,7 +76,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-lg-3">
                             <h2>skills</h2>
                             <ul class="stack">
                                 <li>HTML 5</li>
@@ -91,19 +91,39 @@
                                 <li>ILLUSTRATOR</li>
                             </ul>
                         </div>
-                        <div class="col-9">
+                        <div class="col-lg-9">
                             <h2>experience</h2>
                             <ul class="timeline">
                                 <li>
                                     <span class="year">2013</span>
                                     <span class="title">Front-end developer</span>
-                                    <span class="subtitle">Ameba web design agency</span>
-                                    <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat dicta tempora consequuntur quas, nemo dolores similique praesentium impedit voluptatum, commodi minus sint accusantium illo! Impedit distinctio repellendus illo magni corrupti.</p>
+                                    <span class="subtitle"><a target="_blank" href="https://ameba.studio/">Ameba Creative Studio</a></span>
+                                    <p class="content">
+                                        HTML/CSS interfaces and web design mockups.<br>
+                                        Responsive web design with media queries and animations with transitions.<br>
+                                        Instalation, configuration and personalization ow wordpress themes.<br>
+                                        DOM manipulation and resolution of problems with Javascript.<br>
+                                        Client support via Skype.<br><br>
+                                        Some websites that I worked on: 
+                                        <a target="_blank" href="https://www.archpointid.com/">Archpoint</a>,
+                                        <a target="_blank" href="https://www.tmforum.org/">TMForum</a>,
+                                        <a target="_blank" href="https://www.tr3dent.com/">Transformation Accelerator</a>,
+                                        <a target="_blank" href="http://elclemente.edu.uy/">El Clemente</a>,
+                                        <a target="_blank" href="http://www.teatroelgalpon.org.uy/">Teatro el Galpón</a>,
+                                        <a target="_blank" href="https://socioespectacular.com.uy/">Socio Espectacular</a>,
+                                        <a target="_blank" href="https://www.ameba.com.uy/en/">Ameba</a>
+                                    </p>
+                                        
                                 </li>
                                 <li>
-                                    <span class="year">2015</span>
-                                    <span class="title">Bachelor of Web Design</span>
-                                    <span class="subtitle">ORT University</span>
+                                    <span class="year">2019</span>
+                                    <span class="title">Front-end developer</span>
+                                    <span class="subtitle"><a target="_blank" href="https://www.genexus.com/en/">GeneXus</a></span>
+                                    <p class="content">
+                                        Development of a <a target="_blank" href="https://gx-gemini.netlify.app/?path=/story/other-accordion--classical">design system</a> with <a target="_blank" href="https://stenciljs.com/">StencilJs</a>.<br>
+                                        Development of a <a href="https://www.genexus.com/en/products/genexus/roi-calculator" target="_blank">ROI Calculator</a> that involved HTML, CSS, and Javascript.
+                                        Development of other components that involved HTML, CSS and Javascript.
+                                    </p>
                                 </li>
                             </ul>
                         </div>
