remove part-time job

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <p class="intro">
                                 I am a web developer focused on crafting pixel-perfect desgins. I deliver mockups from designs with 99% accuracy.
                                 I have 6 years of experience developing websites. I love paying attention to details.
-                                I offer to work for free on a first small project so that you know my capabilities. I am looking for a remote part-time job.
+                                I offer to work for free on a first small project so that you know my capabilities. I am looking for a remote job.
                             </p>
                         </div>
                     </div>
