--- a/index.html
+++ b/index.html
@@ -80,16 +80,16 @@
                         <div class="col-lg-3">
                             <h2>skills</h2>
                             <ul class="stack">
-                                <li>HTML 5</li>
-                                <li>CSS3</li>
-                                <li>SASS</li>
-                                <li>RESPONSIVE DESIGN</li>
-                                <li>BOOTSTRAP</li>
-                                <li>JAVASCRIPT</li>
-                                <li>GIT</li>
-                                <li>WORDPRESS</li>
-                                <li>PHOTOSHOP</li>
-                                <li>ILLUSTRATOR</li>
+                                <li><img class="html5" src="assets/icon-html5.png">HTML 5</li>
+                                <li><img class="css3" src="assets/icon-css3.png">CSS3</li>
+                                <li><img class="sass" src="assets/icon-sass.svg">SASS</li>
+                                <li><img class="javascript" src="assets/icon-js.png">JAVASCRIPT</li>
+                                <li><img class="responsive" src="assets/icon-mobile.png">RESPONSIVE</li>
+                                <li><img class="bootstrap" src="assets/icon-bootstrap.svg">BOOTSTRAP</li>
+                                <li><img class="git" src="assets/icon-git.png">GIT</li>
+                                <li><img class="wordpress" src="assets/icon-wordpress.png">WORDPRESS</li>
+                                <li><img class="photoshop" src="assets/icon-ps.png">PHOTOSHOP</li>
+                                <li><img class="illustraotr" src="assets/icon-ai.png">ILLUSTRATOR</li>
                             </ul>
                         </div>
                         <div class="col-lg-9">
