--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <div class="col-lg-3">
                             <h2>contact</h2>
                             <ul class="stack">
-                                <li>brsastre@gmail.com</li>
+                                <li><a href="mailto:brsastre@gmail.com">brsastre@gmail.com</a></li>
                             </ul>
                         </div>
                         <div class="col-lg-9">
