--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                     <p class="content">
                                         HTML/CSS interfaces and web design mockups.<br>
                                         Responsive web design with media queries and animations with transitions.<br>
-                                        Instalation, configuration and personalization ow wordpress themes.<br>
+                                        Instalation, configuration and personalization of wordpress themes.<br>
                                         DOM manipulation and resolution of problems with Javascript.<br>
                                         Client support via Skype.<br><br>
                                         Some websites that I worked on: 
