--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        <aside class="resume">
+        <aside class="resume animated tdDropInRight">
             <header class="aside-header">
                 <div class="box">
                     <div class="initials">
